@@ -1,3 +1,4 @@
+- added road textures
 - Initial Version of game server. Only chatting.
 - First version of barbarians tribe comitted
 - Added training site/military patch by Raul Ferriz
